--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -25,8 +25,17 @@
             </ul>
         </nav>
     </header>
-    <main>
-
+    <main class="form-container">
+        <h2>Log In</h2>
+        <form action="#" id="formContent">
+            <label for="email">E-mail</label>
+            <input class="input-content" type="email" name="email" id="email" required>
+            <label for="password">Mot de passe</label>
+            <input class="input-content" type="password" name="password" id="password" required>
+            <p class="error-message" aria-hidden="true"></p>
+            <input type="submit" value="Se connecter" class="form-button">
+        </form>
+        <a href="#">Mot de passe oublié</a>
     </main>
 
     <footer>
