--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -27,7 +27,7 @@
     </header>
     <main class="form-container">
         <h2>Log In</h2>
-        <form action="#" id="formContent">
+        <form action="#" id="formContent" method="POST">
             <label for="email">E-mail</label>
             <input class="input-content" type="email" name="email" id="email" required>
             <label for="password">Mot de passe</label>
