--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -32,7 +32,7 @@
             <input class="input-content" type="email" name="email" id="email" required>
             <label for="password">Mot de passe</label>
             <input class="input-content" type="password" name="password" id="password" required>
-            <p class="error-message" aria-hidden="true"></p>
+            <span id="error"></span>
             <input type="submit" value="Se connecter" class="form-button">
         </form>
         <a href="#">Mot de passe oublié</a>
