--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -19,7 +19,7 @@
         <nav>
             <ul>
                 <li><a href="./index.html">projets</a></li>
-                <li><a href="#contact">contact</a></li>
+                <li><a href="#">contact</a></li>
                 <li class="login"><a href="./login.html">login</a></li>
                 <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
             </ul>
@@ -45,7 +45,7 @@
             </ul>
         </nav>
     </footer>
-    <script src="./assets/js/form.js" type="module"></script>
+    <script src="./assets/js/login.js" type="module"></script>
 </body>
 
 </html>
