organisation et clean login

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -32,7 +32,7 @@
             <input class="input-content" type="email" name="email" id="email" required>
             <label for="password">Mot de passe</label>
             <input class="input-content" type="password" name="password" id="password" required>
-            <span id="error"></span>
+            <span id="error" class="error"></span>
             <input type="submit" value="Se connecter" class="form-button">
         </form>
         <a href="#">Mot de passe oublié</a>
@@ -45,7 +45,7 @@
             </ul>
         </nav>
     </footer>
-    <script src="./assets/js/login.js" type="module"></script>
+    <script src="./assets/js/base/login.js" type="module"></script>
 </body>
 
 </html>
