--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -70,7 +70,7 @@
 			</ul>
 		</nav>
 	</footer>
-	<script src="./assets/js/javascript.js" type="module"></script>
+	<script src="./assets/js/base/javascript.js" type="module"></script>
 </body>
 
 </html>
