--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -18,8 +18,8 @@
 		<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 		<nav>
 			<ul>
-				<li><a href="./index.html">projets</a></li>
-				<li><a href="#contact">contact</a></li>
+				<li><a id="navProject">projets</a></li>
+				<li><a id="navContact">contact</a></li>
 				<li><a href="./login.html" id="loginButton">login</a></li>
 				<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 			</ul>
