--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -18,7 +18,7 @@
         <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
         <nav>
             <ul>
-                <li><a href="./index.html">projets</a></li>
+                <li><a href="#">projets</a></li>
                 <li><a href="#">contact</a></li>
                 <li class="login"><a href="./login.html">login</a></li>
                 <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
