ajout mod admin

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -14,37 +14,39 @@
 </head>
 
 <body>
-    <header>
-        <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-        <nav>
-            <ul>
-                <li><a href="#">projets</a></li>
-                <li><a href="#">contact</a></li>
-                <li class="login"><a href="./login.html">login</a></li>
-                <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
-            </ul>
-        </nav>
-    </header>
-    <main class="form-container">
-        <h2>Log In</h2>
-        <form action="#" id="formContent" method="POST">
-            <label for="email">E-mail</label>
-            <input class="input-content" type="email" name="email" id="email" required>
-            <label for="password">Mot de passe</label>
-            <input class="input-content" type="password" name="password" id="password" required>
-            <span id="error" class="error"></span>
-            <input type="submit" value="Se connecter" class="form-button">
-        </form>
-        <a href="#">Mot de passe oublié</a>
-    </main>
+    <div class="all-doc">
+        <header>
+            <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+            <nav>
+                <ul>
+                    <li><a href="#">projets</a></li>
+                    <li><a href="#">contact</a></li>
+                    <li class="login"><a href="./login.html">login</a></li>
+                    <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+                </ul>
+            </nav>
+        </header>
+        <main class="form-container">
+            <h2>Log In</h2>
+            <form action="#" id="formContent" method="POST">
+                <label for="email">E-mail</label>
+                <input class="input-content" type="email" name="email" id="email" required>
+                <label for="password">Mot de passe</label>
+                <input class="input-content" type="password" name="password" id="password" required>
+                <span id="error" class="error"></span>
+                <input type="submit" value="Se connecter" class="form-button">
+            </form>
+            <a href="#">Mot de passe oublié</a>
+        </main>
 
-    <footer>
-        <nav>
-            <ul>
-                <li>Mentions Légales</li>
-            </ul>
-        </nav>
-    </footer>
+        <footer>
+            <nav>
+                <ul>
+                    <li>Mentions Légales</li>
+                </ul>
+            </nav>
+        </footer>
+    </div>
     <script src="./assets/js/base/login.js" type="module"></script>
 </body>
 
