--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -30,7 +30,7 @@
             <h2>Log In</h2>
             <form action="#" id="formContent" method="POST">
                 <label for="email">E-mail</label>
-                <input class="input-content" type="email" name="email" id="email" required>
+                <input class="input-content" type="text" name="email" id="email" required>
                 <label for="password">Mot de passe</label>
                 <input class="input-content" type="password" name="password" id="password" required>
                 <span id="error" class="error"></span>
