--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -85,6 +85,13 @@
 				</ul>
 			</nav>
 		</footer>
+
+	</div>
+	<div class="modal-container" id="modalContainer">
+		<div class="modal-button-leave" id="modalButtonLeave">
+
+		</div>
+
 	</div>
 	<script src="./assets/js/base/javascript.js" type="module"></script>
 	<script src="./assets/js/admin/admin.js" type="module"></script>
