--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/style/style.css">
 </head>
 
-<body>
+<body class="body-login">
     <div class="all-doc">
         <header>
             <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
