--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -20,7 +20,7 @@
 			<p>Mode édition</p>
 		</div>
 	</div>
-	<div class="all-doc">
+	<div class="all-doc" id="allDoc">
 		<header>
 			<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 			<nav>
