--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -47,6 +47,7 @@
             </nav>
         </footer>
     </div>
+    <!-- Script JavaScript -->
     <script src="./assets/js/base/login.js" type="module"></script>
 </body>
 
