--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -89,22 +89,17 @@
 	</div>
 	<!-- Modal Gallerie -->
 	<div class="modal">
-		<div class="modal__container">
-			<header class="modal__header">
-				<img class="modalButton modalBackward" src="./assets/icons/arrow-left.png" alt="Fleche gauche">
-				<img class="modalButton modal__button--close modal__close" src="./assets/icons/xmark.png"
-					alt="Fleche gauche">
-			</header>
-			<h3 class="modal__title"></h3>
-			<div class="modal__content"></div>
-			<footer class="modal__footer">
-				<div class="modal__footer__gallery">
-					<button class="modal__footer__button modal__footer__button--add">Ajouter une photo</button>
-				</div>
-				<div class="modal__footer__upload">
-					<button class="modal__footer__button modal__footer__button--upload">Valider</button>
-				</div>
-			</footer>
+		<div class="modal-header">
+			<div class="modal-nav-buttons">
+				<img class="modal-nav-button modal-arrow-left" src="./assets/icons/arrow-left.png" alt="Fleche gauche">
+				<img class="modal-nav-button modal-cross-right" src="./assets/icons/xmark.png" alt="Croix droite">
+			</div>
+			<h3 class="modal-title">test</h3>
+		</div>
+		<div class="modal-content"></div>
+		<div class="break"></div>
+		<div class="modal-action-buttons">
+			<div class="button-action"><span>testbouton</span></div>
 		</div>
 	</div>
 	<!-- Script JavaScript -->
