--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -99,7 +99,7 @@
 		<div class="modal-content"></div>
 		<div class="break"></div>
 		<div class="modal-action-buttons">
-			<div class="button-action"><span>testbouton</span></div>
+			<div class="button-action modal-footer-gallery"><span>testbouton</span></div>
 		</div>
 	</div>
 	<!-- Script JavaScript -->
