--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -88,18 +88,22 @@
 
 	</div>
 	<!-- Modal Gallerie -->
-	<div class="modal">
-		<div class="modal-header">
-			<div class="modal-nav-buttons">
-				<img class="modal-nav-button modal-arrow-left" src="./assets/icons/arrow-left.png" alt="Fleche gauche">
-				<img class="modal-nav-button modal-cross-right" src="./assets/icons/xmark.png" alt="Croix droite">
+	<div class="modal-container">
+		<div class="modal-overlay"></div>
+		<div class="modal">
+			<div class="modal-header">
+				<div class="modal-nav-buttons">
+					<img class="modal-nav-button modal-arrow-left" src="./assets/icons/arrow-left.png"
+						alt="Fleche gauche">
+					<img class="modal-nav-button modal-cross-right" src="./assets/icons/xmark.png" alt="Croix droite">
+				</div>
+				<h3 class="modal-title">test</h3>
 			</div>
-			<h3 class="modal-title">test</h3>
-		</div>
-		<div class="modal-content"></div>
-		<div class="break"></div>
-		<div class="modal-action-buttons">
-			<div class="button-action modal-footer-gallery"><span>testbouton</span></div>
+			<div class="modal-content"></div>
+			<div class="break"></div>
+			<div class="modal-action-buttons">
+				<div class="button-action modal-footer-gallery"><span>testbouton</span></div>
+			</div>
 		</div>
 	</div>
 	<!-- Script JavaScript -->
