add modal fonctionel

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -101,15 +101,15 @@
 			</div>
 			<div class="modal-content"></div>
 			<form class="modal-add-content">
-				<div class="modal-add-image">
+				<!-- <div class="modal-add-image">
 					<div class="modal-add-image-content">
-						<img class="add-img" src="./assets/icons/test-pic.png" alt="test">
+						<img class="add-img-icone" src="./assets/icons/test-pic.png" alt="test">
 						<button class="add-img-button"> + Ajouter une photo</button>
 						<input type="file" class="add-img-input">
-						<p>jpg, png: 4mo max</p>
+						<p class="add-img-text">jpg, png: 4mo max</p>
 					</div>
-				</div>
-				<div class="modal-add-input-box">
+				</div> -->
+				<!-- <div class="modal-add-input-box">
 					<label class="modal-input-title" for="titleInput">Titre</label>
 					<input class="modal-input" type="text" name="titre" id="titleInput">
 					<label class="modal-input-title" for="categorySearch">Catégorie</label>
@@ -121,12 +121,12 @@
 				</div>
 
 				<div class="break"></div>
-				<button class="button-action modal-footer-submit">Valider</button>
+				<button class="button-action modal-footer-submit">Valider</button> -->
 			</form>
 			<div class=" break-content break">
 			</div>
 			<div class="modal-action-buttons">
-				<div class="button-action modal-footer-gallery"><span>testbouton</span></div>
+				<div class="button-action modal-footer-gallery btn-green"><span>testbouton</span></div>
 			</div>
 		</div>
 	</div>
